netcdf-derive/tests/failing/unittype.rs
#[derive(netcdf_derive::NcType)]
#[repr(C)]
struct B;

fn main() {}
