netcdf-derive/tests/failing/unittype.stderr
error: Can not derive NcType for unit struct
 --> tests/failing/unittype.rs:2:1
  |
2 | / #[repr(C)]
3 | | struct B;
  | |_________^
